<resources>
    <string name="app_name">Find Me On Github</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="avatar">Avatar</string>
    <string name="avatar_of_user">Avatar of User</string>
    <string name="search">Search Github User</string>
    <string name="title_activity_detail_of_user">DetailOfUserActivity</string>
    <string name="first_tab">Followers</string>
    <string name="second_tab">Following</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dark_mode_not_a_dark_life">Dark Mode</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="yay">Yay!</string>
    <string name="nay">Nay!</string>
    <string name="title_activity_of_setting">ActivityOfSetting</string>
    <string name="id">id</string>
</resources>